# Thalos_Prime_New_system_build

./: .gitignore  ADVANCED_GUI_COMPLETE.txt  BUILD_COMPLETION_REPORT.py  COMPLETE_FILE_MANIFEST.txt  COMPLETE_PROJECT_INDEX.md  COMPLETE_SETUP_SUMMARY.md  DIRECTORY_STRUCTURE.md  ENHANCEMENT_v2.md  FINAL_COMPLETION_REPORT.txt  FINAL_DELIVERY_INDEX.txt  FINAL_PROJECT_COMPLETION.txt  FINAL_STATUS.md  FINAL_USER_GUIDE.txt  GUI_APPLICATION_COMPLETE.txt  IMPLEMENTATION_COMPLETE.md  INSTALLATION_GUIDE.md  ISSUE_RESOLUTION_VERIFICATION.md  KERNEL_IMPLEMENTATION_SUMMARY.md  LAUNCH.bat  LAUNCH.py  LAUNCH_ADVANCED_GUI.bat  LAUNCH_GUI.bat  MANIFEST.in  MATRIX_CODEX_COMPLETE.txt  MODULES_IMPLEMENTATION_REPORT.md  PIPELINE_DOCUMENTATION.txt  PROJECT_COMPLETION_CERTIFICATE.md  QUICKSTART.md  QUICK_START_MODULES.md  README.md  README_FINAL.md  REORGANIZATION_SUMMARY.md  SECURITY_SUMMARY.md  SETUP_AND_RUN.bat  SYSTEM_BUILD_REPORT.md  SYSTEM_RUNNING_STATUS.txt  THALOS_PRIME_V2_COMPLETE.md  THALOS_SBI_STANDALONE_ARCHITECTURE.md  THALOS_SBI_STANDALONE_COMPLETE.md  VERIFICATION_REPORT.txt  (+27 more)
cache/: README.md
config/: settings.yaml
data/: README.md
docs/: ADVANCED_GUI_DOCUMENTATION.md  ARCHITECTURE.md  COMPLETE_CORE_ARCHITECTURE.md  COMPLETE_DELIVERY_MANIFEST.txt  COMPLETE_ECOSYSTEM_INDEX.md  COMPLETE_FILE_INDEX.txt  CONSOLIDATION_SUMMARY.txt  FILE_INDEX.md  FINAL_COMPLETION_CONFIRMATION.txt  FINAL_INTEGRATION_REPORT.txt  FINAL_VERIFICATION_v3.2.txt  GUI_README.md  LEGAL_DOCUMENTATION.txt  MASTER_PROJECT_SUMMARY_v3.2.txt  MATRIX_CODEX_DOCUMENTATION.txt  PIPELINE_FINAL_STATUS.txt  QUICK_REFERENCE.md  QUICK_START.txt  README_APP.md  SPECIFICATIONS_MET.txt  SYSTEM_COMPLETION.md  SYSTEM_CONFIGURATION_VERIFICATION_REPORT.txt  SYSTEM_READY_FOR_DEPLOYMENT.txt  SYSTEM_STATUS.txt  THALOS_CORE_FORMALISM.md  THALOS_PRIME_COMPLETE_README.md  THALOS_PRIME_SYSTEMS_BUSINESS_CHARTER.txt  V2_COMPLETE_FILE_INDEX.md  structure.txt
logs/: README.md
node_system/: .env.example  index.js  package-lock.json  package.json
output/: README.md
scripts/: COMPLETE_FILE_INVENTORY.py  MASTER_COMPLETION_CHECKLIST.py  advanced_database_configuration.py  background_engine.py  code_inspection_and_resolution.py  database_wetware_files.py  master_initializer.py  matrix_codex.py  response_pipeline.py  sbi_reasoning_core.py  thalos_complete_system.py  thalos_prime_application.py  web_connectivity.py
tests/: test_gui_import.py
thalos_prime/: __init__.py
thalos_prime_advanced_gui/: __init__.py
thalos_sbi_standalone/: MODULE_INDEX.json  __init__.py  analytics_module.py  api_layer.py  behavioral_engine.py  code_generator.py  complete_math_module.py  complete_nlp_module.py  core_engine.py  knowledge_system.py  learning_systems.py  multiagent_system.py  nlp_module.py  planning_module.py  reasoning_engines.py  run_generator.py  semantic_engine.py  testing_suite.py  (+1 more)
(+49 files in other folders)
