[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thalos-prime"
version = "3.2.0"
description = "THALOS Prime - Advanced AI System with Matrix Codex and Neural Networks"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "THALOS Prime Systems"},
]
keywords = ["ai", "neural-networks", "matrix", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "flake8>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/XxxGHOSTX/Thalos_Prime_New_system_build"
Repository = "https://github.com/XxxGHOSTX/Thalos_Prime_New_system_build"

[project.scripts]
thalos-prime = "thalos_app:main"

[tool.setuptools]
packages = ["thalos_prime", "src.thalos"]

[tool.setuptools.package-data]
thalos_prime = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
